--- a/server/.gitignore
+++ b/server/.gitignore
@@ -2,7 +2,10 @@
 node_modules
 index.html
 SequelizeTest.js
-/dist
+/api/models/DRDB_Seq.js
+/api/models/DRDB_SQL.js
+/api/models/DRDB.js
+
 
 # local env files
 .env.local
