--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.24.0",
     "vue": "^2.6.11",
+    "vue-async-computed": "^3.8.2",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.20",
     "vuex": "^3.1.2",
