--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.6.11",
     "vue-async-computed": "^3.8.2",
     "vue-router": "^3.1.5",
+    "vue2-editor": "^2.10.2",
     "vuetify": "^2.2.22",
     "vuex": "^3.1.2",
     "vuex-persistedstate": "^2.5.4",
