--- a/.gitignore
+++ b/.gitignore
@@ -8720,3 +8720,14 @@ server/api/controllers/gmail.js
 server/gmail/credentials.json
 server/gmail/index.js
 server/gmail/token.json
+server/api/google/gmail/credentials.json
+server/api/google/gmail/index.js
+server/api/google/lab2/credentials.json
+server/api/google/lab2/index.js
+server/api/controllers/gmail_old.js
+server/api/google/lab1/credentials.json
+server/api/google/lab1/index.js
+server/api/google/lab2/token.json
+server/api/google/lab3/credentials.json
+server/api/google/lab3/index.js
+server/api/google/lab3/token.json
