--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,8 @@
     "vue-async-computed": "^3.8.2",
     "vue-router": "^3.1.5",
     "vue2-editor": "^2.10.2",
-    "vuetify": "^2.2.23",
-    "vuex": "^3.2.0",
+    "vuetify": "^2.2.25",
+    "vuex": "^3.3.0",
     "vuex-persistedstate": "^2.5.4",
     "vuex-router-sync": "^5.0.0"
   },
@@ -32,10 +32,12 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
-    "sass": "^1.19.0",
+    "sass": "^1.26.5",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-store": "0.0.7",
     "vue-cli-plugin-vuetify": "~2.0.5",
+    "vue-cli-plugin-vuetify-preset-basil": "~1.0.3",
+    "vue-cli-plugin-vuetify-preset-reply": "~1.0.3",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
   },
