--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,10 @@
     "moment": "^2.24.0",
     "vue": "^2.6.11",
     "vue-async-computed": "^3.8.2",
+    "vue-google-charts": "^0.3.2",
     "vue-router": "^3.1.5",
     "vue2-editor": "^2.10.2",
-    "vuetify": "^2.2.25",
+    "vuetify": "^2.2.26",
     "vuex": "^3.3.0",
     "vuex-persistedstate": "^2.5.4",
     "vuex-router-sync": "^5.0.0"
