--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,13 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "material-design-icons-iconfont": "^5.0.1",
-    "moment": "^2.26.0",
+    "moment": "^2.27.0",
     "vue": "^2.6.11",
     "vue-async-computed": "^3.8.2",
     "vue-google-charts": "^0.3.3",
     "vue-router": "^3.3.4",
     "vue2-editor": "^2.10.2",
-    "vuetify": "^2.3.1",
+    "vuetify": "^2.3.2",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^2.5.4",
     "vuex-router-sync": "^5.0.0"
@@ -27,16 +27,16 @@
     "@mdi/js": "^5.3.45",
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
-    "@vue/cli-plugin-router": "^4.4.4",
-    "@vue/cli-plugin-vuex": "^4.4.4",
+    "@vue/cli-plugin-router": "^4.4.6",
+    "@vue/cli-plugin-vuex": "^4.4.6",
     "@vue/cli-service": "~4.2.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
-    "sass": "^1.26.8",
+    "sass": "^1.26.9",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-store": "0.0.7",
-    "vue-cli-plugin-vuetify": "~2.0.5",
+    "vue-cli-plugin-vuetify": "^2.0.6",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.5.0"
   },
