--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "googleapis": "^47.0.0",
@@ -22,7 +23,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
-    "objection": "^2.2.0",
+    "objection": "^2.2.1",
     "sequelize": "^5.22.3",
     "socket.io": "^2.3.0"
   },
