--- a/.gitignore
+++ b/.gitignore
@@ -8731,6 +8731,12 @@ server/api/google/lab2/token.json
 server/api/google/lab3/credentials.json
 server/api/google/lab3/index.js
 server/api/google/lab3/token.json
+server/api/google/lab5/credentials.json
+server/api/google/lab5/index.js
+server/api/google/lab5/token.json
+server/api/google/lab6/credentials.json
+server/api/google/lab6/index.js
+server/api/google/lab6/token.json
 
 server/api/google/general/credentials.json
 server/api/google/general/index.js
