--- a/.gitignore
+++ b/.gitignore
@@ -8737,6 +8737,9 @@ server/api/google/lab5/token.json
 server/api/google/lab6/credentials.json
 server/api/google/lab6/index.js
 server/api/google/lab6/token.json
+server/api/google/lab7/credentials.json
+server/api/google/lab7/index.js
+server/api/google/lab7/token.json
 
 server/api/google/general/credentials.json
 server/api/google/general/index.js
