--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,11 @@
     "http": "0.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.15",
+    "moment": "^2.27.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "node-cron": "^2.0.3",
     "nodemon": "^2.0.4",
     "objection": "^2.2.2",
     "pm2": "^4.4.0",
