--- a/.gitignore
+++ b/.gitignore
@@ -8719,8 +8719,9 @@ client/src/services/appointment copy.js
 server/api/controllers/gmail_old.js
 
 server/api/google/labs
+server/api/models/DRDB.js
 
 server/api/google/general/index.js
 server/api/google/general/token.json
-server/api/models/DRDB_SQL.js
 server/api/models/DRDB.js
+server/api/models/DRDB_SQLw.js
