--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.27.0",
     "vue": "^2.6.12",
     "vue-async-computed": "^3.9.0",
+    "vue-chartjs": "^3.5.1",
     "vue-google-charts": "^0.3.3",
     "vue-router": "^3.4.3",
     "vue2-editor": "^2.10.2",
