--- a/.gitignore
+++ b/.gitignore
@@ -8732,3 +8732,5 @@ client/src/components/AppointmentTable.vue
 docs/_build
 docs/_static/
 docs/_templates/
+client/src/components/AppointmentTable.vue
+client/src/components/EmailDialog.vue
