--- a/.gitignore
+++ b/.gitignore
@@ -8741,3 +8741,4 @@ docs/_build/html/.buildinfo
 docs/_build/html/genindex.html
 docs/_build/html/search.html
 docs/_build/html/index.html
+server/ecosystem.config.js
