--- a/.gitignore
+++ b/.gitignore
@@ -8740,3 +8740,5 @@ docs/_build/html/search.html
 docs/_build/html/index.html
 server/ecosystem.config.js
 server/config/general.js
+server/api/models/DRDB.js.rej
+server/api/models/DRDB.js.orig
