--- a/.gitignore
+++ b/.gitignore
@@ -8743,3 +8743,6 @@ server/config/general.js
 server/api/models/DRDB.js.rej
 server/api/models/DRDB.js.orig
 .vscode/settings.json
+server/config/general.js-20201102
+server/config/general.js-20210124
+.gitignore
