--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express-async-handler": "^1.1.4",
     "googleapis": "^61.0.0",
     "http": "0.0.0",
+    "jsonexport": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.15",
     "moment": "^2.29.1",
