Real-time update

--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,8 @@
     "objection": "^2.2.4",
     "pm2": "^4.5.1",
     "sequelize": "^5.22.3",
-    "sequelize-auto": "^0.5.4"
+    "sequelize-auto": "^0.5.4",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
