--- a/.gitignore
+++ b/.gitignore
@@ -8747,3 +8747,4 @@ server/config/general.js-20201102
 server/config/general.js-20210124
 .gitignore
 client/src/plugins/variables.js
+client/src/plugins/variables.js
