--- a/.gitignore
+++ b/.gitignore
@@ -8751,3 +8751,5 @@ client/src/plugins/variables.js
 server/server.cert
 server/server.key
 client/src/components/ScheduleTable_old.vue
+server/api/controllers/reminder copy.js
+server/api/controllers/reminder_test.js
