--- a/.gitignore
+++ b/.gitignore
@@ -8754,3 +8754,4 @@ client/src/components/ScheduleTable_old.vue
 server/api/controllers/reminder copy.js
 server/api/controllers/reminder_test.js
 .vscode/settings.json
+server/api/realtimeUpdate/currentFamilies.json
