--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.2",
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "socket.io-client": "^3.1.1",
     "vue": "^2.6.12",
     "vue-async-computed": "^3.9.0",
