--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "vue-async-computed": "^3.9.0",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.4.9",
-    "vue2-editor": "^1.0.1",
+    "vue2-editor": "^2.10.2",
     "vuetify": "^2.4.3",
     "vuex": "^3.6.0",
     "vuex-persistedstate": "^2.5.4",
@@ -29,10 +29,10 @@
     "@mdi/font": "^5.8.55",
     "@mdi/js": "^5.8.55",
     "@vue/cli-plugin-babel": "~4.2.0",
-    "@vue/cli-plugin-eslint": "^3.1.1",
+    "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-plugin-router": "^4.5.9",
     "@vue/cli-plugin-vuex": "^4.5.9",
-    "@vue/cli-service": "^3.5.3",
+    "@vue/cli-service": "^4.1.1",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
