--- a/.gitignore
+++ b/.gitignore
@@ -8755,3 +8755,6 @@ server/api/controllers/reminder copy.js
 server/api/controllers/reminder_test.js
 .vscode/settings.json
 server/api/realtimeUpdate/currentFamilies.json
+.vscode/settings.json
+client/vue.config.js
+server/api/realtimeUpdate/currentFamilies.json
