--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "vuetify": "^2.4.3",
     "vuex": "^3.6.0",
     "vuex-persistedstate": "^2.5.4",
-    "vuex-router-sync": "^5.0.0"
+    "vuex-router-sync": "^5.0.0",
+    "xlsx": "^0.17.0"
   },
   "devDependencies": {
     "@mdi/font": "^5.8.55",
