--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonexport": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.15",
+    "mariadb": "^2.5.5",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
