--- a/.github/workflows/master_oise-drdb-production-app.yml
+++ b/.github/workflows/master_oise-drdb-production-app.yml
@@ -1,56 +1,18 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - OISE-DRDB-Production-APP
-
-on:
-  push:
-    branches:
-      - master
-  workflow_dispatch:
-
+name: push to azure
+on: push
 jobs:
-  build:
+  deploy-to-production:
     runs-on: ubuntu-latest
-
+    if: github.ref == 'refs/heads/master'
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up Node.js version
-        uses: actions/setup-node@v1
-        with:
-          node-version: '16.x'
-
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
-        with:
-          name: node-app
-          path: .
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: node-app
-
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'OISE-DRDB-Production-APP'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BA66766AE5AF4654BA4DE3CA26E24D2E }}
-          package: .
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: '0'
+        ref: 'master'
+    - run: |
+        git remote add azureprod https://OISE-DRDB-Production-APP\\$OISE-DRDB-Production-APP:${{ secrets.AZURE_DEPLOYMENT_PASSWORD }}@drdb.scm.azurewebsites.net/drdb.git
+        git push -u -f azureprod master
+        git checkout master
