--- a/.github/workflows/master_oise-drdb-production-app.yml
+++ b/.github/workflows/master_oise-drdb-production-app.yml
@@ -13,6 +13,6 @@ jobs:
         fetch-depth: '0'
         ref: 'master'
     - run: |
-        git remote add azureprod https://OISE-DRDB-Production-APP\\$OISE-DRDB-Production-APP:${{ secrets.AZURE_DEPLOYMENT_PASSWORD }}@OISE-DRDB-Production-APP.scm.azurewebsites.net/OISE-DRDB-Production-APP.git
+        git remote add azureprod https://OISE-DRDB-Production-APP\$OISE-DRDB-Production-APP:${{ secrets.AZURE_DEPLOYMENT_PASSWORD }}@OISE-DRDB-Production-APP.scm.azurewebsites.net/OISE-DRDB-Production-APP.git
         git push -u -f azureprod master
         git checkout master
