modify gitignore to untrack all credentials

--- a/.gitignore
+++ b/.gitignore
@@ -8719,6 +8719,8 @@ server/api/google/labs
 
 server/api/google/general/index.js
 server/api/google/general/token.json
+server/api/google/general/credentials.json
+
 
 client/._.DS_Store
 .DS_Store
