updating gitignore to ignore currentfamilies.json

--- a/.gitignore
+++ b/.gitignore
@@ -8753,5 +8753,5 @@ client/src/components/ScheduleTable_old.vue
 server/api/controllers/reminder copy.js
 server/api/controllers/reminder_test.js
 client/vue.config.js
-server/api/realtimeUpdate/currentFamilies.json
+server/api/realtimeUpdate
 client/vue.config.js
