--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^40.2.0",
+    "@ckeditor/ckeditor5-vue2": "^3.0.1",
     "axios": "^0.21.4",
     "chart.js": "^2.9.4",
     "core-js": "^3.21.0",
