Add .gitignore rules and release notes HTML file

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
+node_modules/*
 server/api/google/general/credentials.json
 server/api/middleware/calendar.js
 server/SequelizeTest.js
 server/index.html
 server/public
-server/node_modules
+server/node_modules/*
 server/node_modules/.bin/acorn
 server/node_modules/.bin/atob
 server/node_modules/.bin/cdl
